# deferrable-py

./: Makefile  README.md  pyproject.toml
.github/workflows/: package-release.yml  package-test.yml  python-package.yml
deferrable/: __init__.py  decorator.py  tools.py
tests/: test_async.py  test_sync.py
